feat: add complete event cancellation
